enhance mobile navigation: body overflow-x bug on iOS

--- a/src/sass/layout/_sidebar.scss
+++ b/src/sass/layout/_sidebar.scss
@@ -3,6 +3,12 @@
   top: 50px;
 }
 
+@media only screen and (max-width: 640px) {
+  .sticky {
+    position: inherit;
+  }
+}
+
 .sidebar h4 {
   text-align: center;
 }
